Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* fix gentoo bug 216492, a change in libsandbox behaviour- specifically
  libsandbox for >=1.3 is now appending libsandbox.so while failing to
  spot it already existing in LD_PRELOAD; pkgcore tests were written a bit
  strict thus were spotting this.  Loosen the test, and fix the case where
  a different preload is used in conjunction w/ sandbox.


pkgcore 0.4.7.15: Jan 28, 2008

* fix docutils-0.5 incompatibility in build_api_docs.py

* python issue 4230 makes __getattr__ support descriptor protocol.
  This unfortunately causes part of config handling to go boom- fixed.

  Unfortunately this also means that we need to support both descriptor
  and *non* descriptor interpretters at *runtime*- if python is upgraded
  underfoot, things get unhappy to keep atom.__getattr__ from blowing up.
  Fixed either way.

* copy HOMEPAGE into vdb/binpkg by default.


pkgcore 0.4.7.14: Dec 18, 2008

* profile awareness of eapi files, *including* strict validation.

* tighter use dep and atom support in pkgcore for specified eapis.

* ticket 187; fix a traceback when a specific subset of cycles are
  encountered.

* correct a python 2.6 incompatibility; object.__init__() is now strict
  about taking no keywords.


pkgcore 0.4.7.13: Oct 29, 2008

* bug fix for transitive use atoms; if || ( a/b[x?] ), DepSet wasn't detecting
  that there were conditionals w/in it, as such wasn't doing evaluation.


pkgcore 0.4.7.12: Oct 10, 2008 (2 hours after 0.4.7.11 ;)

* security fix; force cwd to something controlled for ebuild env.  This
  blocks an attack detailed in glsa 200810-02; namely that an ebuild invoking
  python -c (which looks in cwd for modules to load) allows for an attacker
  to slip something in.


pkgcore 0.4.7.11: Oct 10, 2008

* fix EAPI2 issues: default related primarily, invoke src_prepare for
  >=EAPI2 instead of >EAPI2.


pkgcore 0.4.7.10: Oct 7, 2008
